--- a/4/draw/Makefile
+++ b/4/draw/Makefile
@@ -8,7 +8,7 @@ SRC      = main.c $(wildcard ./src/*.c) $(wildcard ./src/textbookSrc/*.c)
 OBJ      = $(patsubst %.c, %.o, $(SRC))
 INCS     = -I"./include" -I"./include/textbookHeader"
 BIN      = test.exe
-LDFLAGS  = -static-libgcc -g3 -mwindows
+LDFLAGS  = -static-libgcc -g3 -mwindows -lKernel32
 CFLAGS   = $(INCS) -g3
 
 .PHONY: all clean
@@ -21,9 +21,9 @@ exceptio.o:
 genlib.o:
 graphics.o:
 random.o:
-simpio.o: 
-strlib.o: 
-main.o: 
+simpio.o:
+strlib.o:
+main.o:
 # test.o:
 
 clean:
