--- a/vscode_graphics_sample/Interactive/Makefile
+++ b/vscode_graphics_sample/Interactive/Makefile
@@ -4,11 +4,11 @@ vpath %.h ./include ./include/textbookHeader
 vpath %.c ./src ./src/textbookSrc
 
 CC       = gcc -Wall -O2
-SRC      = main.c $(wildcard ./src/*.c) $(wildcard ./src/textbookSrc/*.c)
+SRC      = igp.c $(wildcard ./src/*.c) $(wildcard ./src/textbookSrc/*.c)
 OBJ      = $(patsubst %.c, %.o, $(SRC))
 INCS     = -I"./include" -I"./include/textbookHeader"
 BIN      = test.exe
-LDFLAGS  = -static-libgcc -g3 -mwindows 
+LDFLAGS  = -static-libgcc -g3 -mwindows
 CFLAGS   = $(INCS) -g3
 
 .PHONY: all clean
@@ -23,7 +23,7 @@ graphics.o:
 random.o:
 simpio.o:
 strlib.o:
-main.o:
+igp.o:
 # test.o:
 
 clean:
