--- a/vscode_graphics_sample/non-Interactive/Makefile
+++ b/vscode_graphics_sample/non-Interactive/Makefile
@@ -8,7 +8,7 @@ SRC      = main.c $(wildcard ./src/*.c) $(wildcard ./src/textbookSrc/*.c)
 OBJ      = $(patsubst %.c, %.o, $(SRC))
 INCS     = -I"./include" -I"./include/textbookHeader"
 BIN      = test.exe
-LDFLAGS  = -static-libgcc -g3 -mwindows 
+LDFLAGS  = -static-libgcc -g3 -mwindows -lKernel32
 CFLAGS   = $(INCS) -g3
 
 .PHONY: all clean
