--- a/3/1-linkedList/Makefile
+++ b/3/1-linkedList/Makefile
@@ -1,25 +1,29 @@
 #simple handwritten makefile for practice
-#
-vpath %.h ./include ./include/textbookHeader
-vpath %.c ./src ./src/textbookSrc
 
-CC       = gcc -Wall -O2
+vpath %.h ./include 
+vpath %.c ./src 
+
+CC       = gcc -Wall -Wextra -O2
 SRC      = main.c $(wildcard ./src/*.c) 
 OBJ      = $(patsubst %.c, %.o, $(SRC))
+TEST_SRC = test.c $(wildcard ./src/*.c)
+TEST_OBJ = $(patsubst %.c, %.o, $(TEST_SRC))
 INCS     = -I"./include" 
-BIN      = test.exe
+BIN      = main.exe
+TEST_BIN = test.exe
 LDFLAGS  = -static-libgcc -g3
 CFLAGS   = $(INCS) -g3
 
-.PHONY: all clean
+.PHONY: all clean test
 all: $(BIN) 
+test: $(TEST_BIN)
+	./test
 
 $(BIN): $(OBJ)
 	$(CC) $(OBJ) -o $(BIN) $(LDFLAGS)
 
-linkedList.o: 
-main.o: 
-# test.o:
+$(TEST_BIN): $(TEST_OBJ)
+	$(CC) $(TEST_OBJ) -o $(TEST_BIN) $(LDFLAGS)
 
 clean:
-	${RM} $(OBJ) $(BIN)
+	${RM} $(OBJ) $(BIN) $(TEST_OBJ) $(TEST_BIN)
